Remove backdrop animation on drawer show/hide and fix z-index for mobile

--- a/src/components/layout/layout.mat.styl
+++ b/src/components/layout/layout.mat.styl
@@ -18,6 +18,8 @@
   bottom 0
   background $layout-aside-background
   z-index $z-side
+  &.fixed.off-screen
+    box-shadow none
   &.fixed.on-screen
     box-shadow $layout-aside-shadow
   &.on-top
